--- a/app/src/main/res/layout/activity_resumo_pacote.xml
+++ b/app/src/main/res/layout/activity_resumo_pacote.xml
@@ -72,7 +72,14 @@
         android:id="@+id/button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/botao_redondo_laranja"
         android:text="Realizar pagamento"
+        android:textColor="#FFFCFC"
+        app:backgroundTint="@android:color/holo_orange_dark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
