--- a/app/src/main/res/layout/activity_pagamento.xml
+++ b/app/src/main/res/layout/activity_pagamento.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activity.Activity_pagamento">
+    tools:context=".ui.activity.PagamentoActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/pagamento_orientacao"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
@@ -20,23 +20,60 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/pagamento_valor_da_compra"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="20dp"
         android:text="Valor da compra:"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/pagamento_orientacao" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/pagamento_preco_pacote"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:textColor="@android:color/holo_green_dark"
         android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintStart_toStartOf="@+id/pagamento_valor_da_compra"
+        app:layout_constraintTop_toBottomOf="@+id/pagamento_valor_da_compra"
         tools:text="R$ 421,50" />
+
+    <EditText
+        android:id="@+id/pagamento_numero_cartao"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:hint="Número do cartão"
+        android:inputType="number"
+        android:maxLength="12"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/pagamento_preco_pacote"
+        app:layout_constraintTop_toBottomOf="@+id/pagamento_preco_pacote" />
+
+    <EditText
+        android:id="@+id/pagamento_mes_cartao"
+        android:layout_width="39dp"
+        android:layout_height="wrap_content"
+        android:hint="MM"
+        android:inputType="number"
+        android:textAlignment="center"
+        android:maxLength="2"
+        app:layout_constraintStart_toStartOf="@id/pagamento_numero_cartao"
+        app:layout_constraintTop_toBottomOf="@+id/pagamento_numero_cartao" />
+
+    <EditText
+        android:id="@+id/pagamento_ano_cartao"
+        android:layout_width="39dp"
+        android:layout_height="wrap_content"
+        android:hint="AA"
+        android:inputType="number"
+        android:textAlignment="center"
+        android:maxLength="2"
+        app:layout_constraintStart_toEndOf="@id/pagamento_mes_cartao"
+        app:layout_constraintTop_toBottomOf="@id/pagamento_numero_cartao" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
