--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">@color/black</color>
+    <color name="purple_200">#FFFFFF</color>
     <color name="purple_500">#000000</color>
-    <color name="purple_700">#000000</color>
-    <color name="teal_200">#656363</color>
-    <color name="teal_700">@color/purple_500</color>
-    <color name="black">#FFFFFF</color>
-    <color name="white">#5C5C5C</color>
+    <color name="purple_700">#3A3A3A</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
+    <color name="black">#FF000000</color>
+    <color name="white">#FFFFFFFF</color>
 </resources>
