--- a/app/src/main/res/layout/activity_pagamento.xml
+++ b/app/src/main/res/layout/activity_pagamento.xml
@@ -3,19 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.activity.PagamentoActivity">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/pagamento_orientacao"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:text="Digite as informações do cartão de crédito que você deseja usar para o pagamento"
+        android:text="@string/orientacao_pagamento"
         android:textAlignment="center"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.351"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -25,7 +23,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="20dp"
-        android:text="Valor da compra:"
+        android:layout_marginEnd="8dp"
+        android:text="@string/valor_da_compra"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pagamento_orientacao" />
 
@@ -43,73 +42,83 @@
     <EditText
         android:id="@+id/pagamento_numero_cartao"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:hint="Número do cartão"
+        android:layout_height="48dp"
+        android:layout_margin="8dp"
+        android:hint="@string/numero_do_cartao"
         android:inputType="number"
         android:maxLength="12"
+        android:textColorHint="#757575"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/pagamento_preco_pacote"
-        app:layout_constraintTop_toBottomOf="@+id/pagamento_preco_pacote" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pagamento_preco_pacote"
+        android:autofillHints="" />
 
     <EditText
         android:id="@+id/pagamento_mes_cartao"
-        android:layout_width="39dp"
-        android:layout_height="wrap_content"
-        android:hint="MM"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:hint="@string/mes_cartao"
         android:inputType="number"
         android:maxLength="2"
         android:textAlignment="center"
+        android:textColorHint="#757575"
         app:layout_constraintBottom_toBottomOf="@+id/pagamento_cvc_cartao"
-        app:layout_constraintStart_toStartOf="@id/pagamento_numero_cartao" />
+        app:layout_constraintStart_toStartOf="@id/pagamento_numero_cartao"
+        android:autofillHints="" />
 
     <EditText
         android:id="@+id/pagamento_ano_cartao"
-        android:layout_width="39dp"
-        android:layout_height="wrap_content"
-        android:hint="AA"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:hint="@string/ano_cartao"
         android:inputType="number"
         android:maxLength="2"
         android:textAlignment="center"
+        android:textColorHint="#757575"
         app:layout_constraintBottom_toBottomOf="@+id/pagamento_cvc_cartao"
-        app:layout_constraintStart_toEndOf="@id/pagamento_mes_cartao" />
+        app:layout_constraintStart_toEndOf="@id/pagamento_mes_cartao"
+        android:autofillHints="" />
 
     <EditText
         android:id="@+id/pagamento_cvc_cartao"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:drawableStart="@drawable/ic_cvc_cartao_de_credito"
-        android:drawableLeft="@drawable/ic_cvc_cartao_de_credito"
-        android:hint="cvc"
+        android:hint="@string/cvc_pagamento"
         android:inputType="number"
         android:maxLength="3"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="@id/pagamento_numero_cartao"
-        app:layout_constraintTop_toBottomOf="@id/pagamento_numero_cartao" />
+        app:layout_constraintTop_toBottomOf="@id/pagamento_numero_cartao"
+        android:autofillHints="" />
 
     <EditText
         android:id="@+id/pagamento_nome_no_cartao"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Nome no cartão"
+        android:digits="@string/mascara_nome_no_cartao"
+        android:hint="@string/nome_no_cartao"
         android:inputType="text"
-        android:digits="abcdefghijklmnopqrstuvwxyzç ABCDEFGHIJKLMNOPQRSTUVWXYZÇ"
+        android:minHeight="48dp"
+        android:textColorHint="#757575"
         app:layout_constraintEnd_toEndOf="@+id/pagamento_cvc_cartao"
         app:layout_constraintStart_toStartOf="@+id/pagamento_mes_cartao"
-        app:layout_constraintTop_toBottomOf="@+id/pagamento_cvc_cartao" />
+        app:layout_constraintTop_toBottomOf="@+id/pagamento_cvc_cartao"
+        android:autofillHints="" />
 
     <Button
         android:id="@+id/pagamento_botao_finaliza_compra"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:backgroundTint="@android:color/holo_orange_dark"
-        android:text="Finalizar compra "
+        android:text="@string/finalizar_compra"
         android:textAlignment="center"
-        android:textColor="@color/purple_200"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/pagamento_nome_no_cartao"
         app:layout_constraintStart_toStartOf="@+id/pagamento_nome_no_cartao"
-        app:layout_constraintTop_toBottomOf="@+id/pagamento_nome_no_cartao" />
+        app:layout_constraintTop_toBottomOf="@+id/pagamento_nome_no_cartao"
+        tools:ignore="TextContrastCheck"
+        tools:targetApi="lollipop" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
